# monochan

./: .gitignore  BUILD.bazel  Makefile  WORKSPACE  go.mod
cmd/example/: BUILD.bazel  main.go
pkg/lib/liba/: BUILD.bazel  lib.go
